# rpma

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  0001-rpma-remove-the-invalidation-of-the-private-data-poi.patch  CHANGELOG.md  CI_ENVIRONMENT.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  TESTING.md  THREAD_SAFETY.md  index.md
doc/: CMakeLists.txt  librpma.7.md  librpma.Doxyfile.in  manuals_3.txt  manuals_7.txt
examples/: CMakeLists.txt  README  README.md  config_rxe.sh  config_softroce.sh  memcheck-libnl.supp  memcheck-librdmacm.supp  run-all-examples.sh  run-all-on-SoftRoCE.sh  run-all-valgrind-on-SoftRoCE.sh  valgrind.supp
examples/01-connection/: CMakeLists.txt  README.md  client.c  connection-client.c  server.c
examples/02-read-to-volatile/: CMakeLists.txt  README.md  client.c  read-client.c  server.c
examples/03-read-to-persistent/: CMakeLists.txt  README.md  client.c  client_pmem2_map_file.c  client_pmem2_map_file.h  client_pmem_map_file.c  client_pmem_map_file.h  server.c
examples/04-write-to-persistent/: CMakeLists.txt  README.md  client.c  hello.h  server.c
examples/05-flush-to-persistent/: CMakeLists.txt  README.md  client.c  server.c
examples/06-multiple-connections/: CMakeLists.txt  README.md  client.c  multiple-connections-common.h  server.c
examples/06s-multiple-connections/: CMakeLists.txt  client.c  multiple-connections-common.h  server.c
examples/06scch-multiple-connections/: CMakeLists.txt  README.md  client.c  server.c
examples/07-atomic-write/: CMakeLists.txt  README.md  client.c  server.c
examples/08-messages-ping-pong/: CMakeLists.txt  README.md  client.c  messages-ping-pong-common.c  messages-ping-pong-common.h  server.c
examples/08s-simple-messages-ping-pong-with-srq/: CMakeLists.txt  README.md  server.c
examples/08srq-simple-messages-ping-pong-with-srq/: CMakeLists.txt  README.md  client.c  server.c
examples/09-flush-to-persistent-GPSPM/: CMakeLists.txt  GPSPM_flush.pb-c.c  GPSPM_flush.pb-c.h  GPSPM_flush.proto  README.md  client.c  flush-to-persistent-GPSPM.h  server.c
examples/09s-flush-to-persistent-GPSPM/: CMakeLists.txt  README.md  client.c  server.c
examples/09scch-flush-to-persistent-GPSPM/: CMakeLists.txt  GPSPM_flush.pb-c.h  README.md  client.c  server.c
examples/10-messages-ping-pong-use-srq/: CMakeLists.txt  README.md  client.c  messages-ping-pong-use-srq-common.h  server.c
examples/10-messages-ping-pong-with-multiple-connections/: CMakeLists.txt  README.md  client.c  messages-ping-pong-with-multiple-connections.h  server.c
examples/10-send-with-imm/: CMakeLists.txt  README.md  client.c  server.c
examples/100-thread-safe-test/: 01-rpma_utils_get_ibv_context.c  CMakeLists.txt
examples/11-write-with-imm/: CMakeLists.txt  README.md  client.c  server.c
examples/12-receive-completion-queue/: CMakeLists.txt  README.md  client.c  receive-completion-queue-common.c  receive-completion-queue-common.h  server.c
examples/12-shared-receive-queue/: CMakeLists.txt  README.md  client.c  server.c  shared-receive-queue.h
examples/12s-receive-completion-queue/: CMakeLists.txt  server.c
examples/12scch-receive-completion-queue/: CMakeLists.txt  README.md  client.c  server.c
examples/13-flush-to-persistent-GPSPM-SHCCH/: README.md  client.c  server.c
examples/13-messages-ping-pong-with-srq/: CMakeLists.txt  README.md  client.c  server.c
examples/14-receive-completion-queue-SHCCH/: README.md  client.c  receive-completion-queue-common.c
examples/15-multiple-connections-SHCCH/: README.md  client.c  server.c
examples/16-messages-ping-pong-SHCCH/: CMakeLists.txt  README.md  client.c  messages-ping-pong-common.c  messages-ping-pong-common.h  server.c
examples/cmake/: FindLIBRPMA.cmake  common.cmake
examples/common/: client_pmem2_map_file.c  client_pmem_map_file.c  client_pmem_map_file.h  common-client_map_file_with_signature_check.c  common-client_map_file_with_signature_check.h  common-client_pmem_signature_check.c  common-client_pmem_signature_check.h  common-conn.c  common-conn.h  common-epoll.c  common-epoll.h  common-example.h  common-hello.c  common-hello.h  common-map_file_with_signature_check.c  common-map_file_with_signature_check.h  common-messages-ping-pong.c  common-messages-ping-pong.h  common-pmem.h  common-pmem2_map_file.c  common-pmem_map_file.c  common-pmem_map_file.h  common-utils.c  common-utils.h  common.c  common.h  cpmem2_map_file.c  cpmem_map_file.c  cpmem_map_file.h  hello.h  server.c  test_mocks.h
examples/connection/: CMakeLists.txt  README  README.md  connection-client.c  connection-server.c
examples/doc_snippets/: template-snippet.c
examples/log/: README.md  log-example.c  log-worker.c
examples/template-example/: CMakeLists.txt  README  README.md  template-example.c
src/: CMakeLists.txt  cmocka-compare_and_swap.h  cmocka_alloc.h  common.h  comp_channel.c  comp_channel.h  config.c  config.h  conn.c  conn.h  conn_cfg.c  conn_cfg.h  conn_req.c  conn_req.h  connection.c  connection.h  cq.c  cq.h  debug.c  debug.h  device.c  device.h  dispatcher.c  dispatcher.h  ep.c  flush.c  flush.h  info.c  info.h  librpma.c  librpma.map  log.c  log_default.c  log_default.h  log_internal.h  memory.c  memory.h  mr.c  mr.h  msg.c  (+23 more)
src/common/: alloc.c  alloc.h  cmocka_alloc.h  fault_injection.h  librpma_log.c  librpma_log_internal.h  log.c  log_internal.h  os.h  os_posix.c  os_thread.h  os_thread_posix.c  out.c  out.h  pmemcommon.h  pmemcore.h  ravl.h  util.c  util.h  util_posix.c
src/core/: os.h  out.c  util.c
src/include/: base.h  librpma.h  librpma_log.h  msg.h  rma.h
src/valgrind/: pmemcheck.h  valgrind_internal.h
tests/: CMakeLists.txt  cmocka_headers.h  drd.supp  helgrind.supp  match  memcheck-libibverbs-librdmacm.supp  memcheck-libibverbs.supp  test_backtrace.c  test_backtrace.h  true.cmake  valgrind_internal.c  valgrind_internal.h
tests/cmake/: ctest_helpers.cmake  helpers.cmake  run_default.cmake
tests/conn-test/: CMakeLists.txt  conn-test-common.c  conn-test-common.h  conn-test-disconnect.c  (+6 more)
(+1452 files in other folders)
